// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`для не yandex-team домена ходит за логином в staff-api и забирает его, в случае успеха 1`] = `
Array [
  Array [
    "/v3/persons",
    Object {
      "_fields": "login",
      "_one": 1,
      "work_email": "diadorer@yamoney.ru",
    },
  ],
  Array [
    "/v3/persons",
    Object {
      "_fields": "official.position,phones,work_phone,department_group.department.name.full",
      "_one": 1,
      "login": "FAKE_LOGIN",
    },
  ],
]
`;

exports[`запрашивает модели staff-is-external и gap 1`] = `
Array [
  Array [
    "staff-is-external",
  ],
  Array [
    "gap",
    Object {
      "date_from": "2020-03-30T00:00:00",
      "date_to": "2020-03-30T00:00:00",
      "person_login": Array [
        "diadorer",
      ],
    },
  ],
]
`;

exports[`работает 1`] = `
Object {
  "gaps": Array [
    Object {
      "color": "#ffc136",
      "comment": "",
      "date_from": "2020-03-30T00:00:00",
      "date_to": "2020-04-04T00:00:00",
      "full_day": true,
      "work_in_absence": true,
      "workflow": "absence",
    },
  ],
  "group": Object {
    "name": "TEST_DEPARTMENT_GROUP",
  },
  "login": "diadorer",
  "phones": Object {
    "mobile": Array [
      "FAKE_PHONE_NUMBER",
    ],
    "work": 21973,
  },
  "position": "TEST_POSITION_RU",
}
`;

exports[`ходит в staff-api за данными пользователя 1`] = `
Array [
  Array [
    "/v3/persons",
    Object {
      "_fields": "official.position,phones,work_phone,department_group.department.name.full",
      "_one": 1,
      "login": "diadorer",
    },
  ],
]
`;
